Bug 493185 - Perspective guides break upon undoing changes
Summary: Perspective guides break upon undoing changes
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tool/Assistants (other bugs)
Version First Reported In: 5.2.3
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2024-09-16 06:43 UTC by petra_m_
Modified: 2024-09-16 11:03 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
A demonstration of the issue (649.97 KB, video/webm)
2024-09-16 06:43 UTC, petra_m_
Details

Note You need to log in before you can comment on or make changes to this bug.
Description petra_m_ 2024-09-16 06:43:37 UTC
Created attachment 173714 [details]
A demonstration of the issue

Perspective grid guides appear to lose effect upon undoing changes on them. Issue appears to be localized to guides which are affected by the undo operation.
Steps to reproduce:
- select a brush that support perspective guides (ex.: size change controlled by perspective);
- set up a perspective grid guide;
- draw in the grid;
- edit grid, undo said edit then draw in grid again
A demonstration is available for this issue
Environment:
Demonstration was recorded on the following configuration:
- Ubuntu 22.04.5/Linux 6.8.0-40-generic
- Qt 5.15.3
- KDE Plasma 5.27.11/KDE Frameworks 5.104.0 running on Wayland
- Krita 5.2.3, installed from a PPA
The isuue affects all platforms as it is also present in the official AppImage (git commit 68d178c) as well as in the latest Windows build
Comment 1 Dmitry Kazakov 2024-09-16 10:56:40 UTC
Git commit 73025b43bf68e804e473090819a3e4cb2922dd22 by Dmitry Kazakov.
Committed on 16/09/2024 at 10:56.
Pushed by dkazakov into branch 'master'.

Update cache when cloning perspective assistants

Cloning is used in undo/redo operations. If we don't update the cache,
then "perspective distance" value used in brushes is incorrect.

M  +2    -0    plugins/assistants/Assistants/PerspectiveAssistant.cc
M  +2    -0    plugins/assistants/Assistants/PerspectiveEllipseAssistant.cc

https://invent.kde.org/graphics/krita/-/commit/73025b43bf68e804e473090819a3e4cb2922dd22
Comment 2 Dmitry Kazakov 2024-09-16 11:03:31 UTC
Git commit b38b3450ecc12e6e499af41ea290be26332c6695 by Dmitry Kazakov.
Committed on 16/09/2024 at 11:03.
Pushed by dkazakov into branch 'krita/5.2'.

Update cache when cloning perspective assistants

Cloning is used in undo/redo operations. If we don't update the cache,
then "perspective distance" value used in brushes is incorrect.

M  +2    -0    plugins/assistants/Assistants/PerspectiveAssistant.cc
M  +2    -0    plugins/assistants/Assistants/PerspectiveEllipseAssistant.cc

https://invent.kde.org/graphics/krita/-/commit/b38b3450ecc12e6e499af41ea290be26332c6695