Update cache when cloning perspective assistants

Cloning is used in undo/redo operations. If we don't update the cache,
then "perspective distance" value used in brushes is incorrect.

BUG:493185